--- a/HXH.html
+++ b/HXH.html
@@ -32,6 +32,8 @@
     L'anime est tellement immersif qu'une fois qu'on y a gouté on ne peux pas arrêter et il y a aussi le fait que c'est tellement bien écrit que sans même que les personnages parle tu peux comprendre la situation dans laquelle les personnages sont.
     Malgré le fait que les personnages principaux soient des enfants, ils restent très mature et sont prêt à apprendre de tout le monde, ce qui selon moi est une qualité très important et qui fait le charme de Gon et de son ami Kirua.
 </p>
+<p>Voici la musique du générique de l'anime</p>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/26TtP84gzYGmNeftIyB9Ug?utm_source=generator" width="25%" height="150" frameBorder="0" allowfullscreen="" audioObject.autoplay="true"; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <pre>
 
 
@@ -39,7 +41,7 @@
    
     
 
-
+Music par <a href="https://open.spotify.com/track/26TtP84gzYGmNeftIyB9Ug?si=5f2bf9757574499e">https://open.spotify.com/track/26TtP84gzYGmNeftIyB9Ug?si=5f2bf9757574499e</a>
 </pre>
 <footer><center><pre>Vous pouvez me contacter par courriel au <a href="mailto:lafontainea@csdmedu.ca">lafontainea@csdmedu.ca</a> 
     ou par téléphone au 514-555-0131
