--- a/HXH.html
+++ b/HXH.html
@@ -40,7 +40,7 @@
 
    
     
-
+L'image est produite par IA à ce site <a href=https://www.craiyon.com/>https://www.craiyon.com/></a>
 Music par <a href="https://open.spotify.com/track/26TtP84gzYGmNeftIyB9Ug?si=5f2bf9757574499e">https://open.spotify.com/track/26TtP84gzYGmNeftIyB9Ug?si=5f2bf9757574499e</a>
 </pre>
 <footer><center><pre>Vous pouvez me contacter par courriel au <a href="mailto:lafontainea@csdmedu.ca">lafontainea@csdmedu.ca</a> 
