--- a/BreakingBad.html
+++ b/BreakingBad.html
@@ -47,7 +47,7 @@ En plus d'être bien acté dans la série les personnages ont tout pleins de ré
 
 
 
-
+Image provenant de Pinterest <a href=https://www.pinterest.ca/pin/384987468142510563/>https://www.pinterest.ca/pin/384987468142510563/</a>
 </pre>
 <footer><center><pre>Vous pouvez me contacter par courriel au <a href="mailto:lafontainea@csdmedu.ca">lafontainea@csdmedu.ca</a> 
     ou par téléphone au 514-555-0131
