--- a/HXH.html
+++ b/HXH.html
@@ -33,7 +33,7 @@
     Malgré le fait que les personnages principaux soient des enfants, ils restent très mature et sont prêt à apprendre de tout le monde, ce qui selon moi est une qualité très important et qui fait le charme de Gon et de son ami Kirua.
 </p>
 <p>Voici la musique du générique de l'anime</p>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/26TtP84gzYGmNeftIyB9Ug?utm_source=generator" width="25%" height="150" frameBorder="0" allowfullscreen="" audioObject.autoplay="true"; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/26TtP84gzYGmNeftIyB9Ug?utm_source=generator" width="25%" height="150" frameBorder="0" allowfullscreen="" audioObject.autoplay="true"; clipboard-write; encrypted-media; fullscreen; picture-in-picture; audio.volume=50" loading="lazy"></iframe>
 <pre>
 
 
