--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     ou par téléphone au 514-555-0131
     (Chrome, Opéra, Safari, Edge et FireFox)
     <a href="PlanDuSite.html">Plan du site</a>
-    <a href="https://www.facebook.com/?locale=fr_CA"><img width=15px height="15px" src="facebook.png"></a></pre></center></footer>
+    <a href="https://www.facebook.com/?locale=fr_CA"><img width=15px height="15px" src="Facebook.png"></a></pre></center></footer>
 
 
 </html>
