--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     ou par téléphone au 514-555-0131
     (Chrome, Opéra, Safari, Edge et FireFox)
     <a href="PlanDuSite.html">Plan du site</a>
+  <img width=30px height="30px" src="facebook.png">
     <a href="https://www.facebook.com/?locale=fr_CA"><img width=30px height="30px" src="facebook.png"></a></pre></center></footer>
 
 
