--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     (Chrome, Opéra, Safari, Edge et FireFox)
     <a href="PlanDuSite.html">Plan du site</a>
   </pre>
-    <a href="https://www.facebook.com/?locale=fr_CA"><img width=15px height="15px" src="facebook.png"></a></center>
+    <a href="https://www.facebook.com/?locale=fr_CA"><img width=15px height="15px" src="facebook.ico"></a></center>
 </footer>
 
 
