--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
     (Chrome, Opéra, Safari, Edge et FireFox)
     <a href="PlanDuSite.html">Plan du site</a>
   </pre>
-    <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center>
-</footer>
+    <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></footer>
 
 
 </html>
