--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 <footer><center><pre>Vous pouvez me contacter par courriel au <a href="mailto:lafontainea@csdmedu.ca">lafontainea@csdmedu.ca</a> 
     ou par téléphone au 514-555-0131
     (Chrome, Opéra, Safari, Edge et FireFox)
-    <a href="PlanDuSite.html">Plan du site</a>
-  </pre>
+    <a href="PlanDuSite.html">Plan du site</a></pre>
     <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></footer>
 
 
