SitesD'Intérêts.html

--- a/SitesD'Intérêts.html
+++ b/SitesD'Intérêts.html
@@ -72,5 +72,5 @@
         ou par téléphone au 514-555-0131
         (Chrome, Opéra, Safari, Edge et FireFox)
         <a href="PlanDuSite.html">Plan du site</a>
-        <a href="https://www.facebook.com/?locale=fr_CA"><img width=15px height="15px" src="facebook.png"></a></pre></center></footer>
+         <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></pre></footer>
 </html>
