--- a/PlanDuSite.html
+++ b/PlanDuSite.html
@@ -99,4 +99,5 @@
         ou par téléphone au 514-555-0131
         <a href="PlanDuSite.html">Plan du site</a>
         (Chrome, Opéra, Safari, Edge et FireFox)</pre></center></footer>
+     <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></pre></footer>
 </html>
