--- a/FAQ.html
+++ b/FAQ.html
@@ -8,12 +8,12 @@
     </head>
     <h1><center>Les préférés d'Alex</center></h1>
     <div class="topnav">
-        <a class="active" href="Les préférés d'Alex.html">Accueil</a>
+        <a href="Les préférés d'Alex.html">Accueil</a>
         <a href="BreakingBad.html">Breaking Bad</a>
         <a href="HXH.html">Hunter X Hunter</a>
         <a href="SitesD'Intérêts.html">Sites D'intérêts</a>
         <a href="JeuV2.html">Mini-Jeu</a>
-        <a href="FAQ.html">FAQ</a>
+        <a class="active" href="FAQ.html">FAQ</a>
         <a href="ÀPropos.html">À Propos</a>
       </div>
     <h2><center>FAQ</center></h2>
