--- a/HXH.html
+++ b/HXH.html
@@ -8,9 +8,9 @@
     </head>
     <h1><center>Les préférés d'Alex</center></h1>
     <div class="topnav">
-        <a class="active" href="Les préférés d'Alex.html">Accueil</a>
+        <a href="Les préférés d'Alex.html">Accueil</a>
         <a href="BreakingBad.html">Breaking Bad</a>
-        <a href="HXH.html">Hunter X Hunter</a>
+        <a class="active" href="HXH.html">Hunter X Hunter</a>
         <a href="SitesD'Intérêts.html">Sites D'intérêts</a>
         <a href="JeuV2.html">Mini-Jeu</a>
         <a href="FAQ.html">FAQ</a>
@@ -47,5 +47,5 @@ Music par <a href="https://open.spotify.com/track/26TtP84gzYGmNeftIyB9Ug?si=5f2b
     ou par téléphone au 514-555-0131
     (Chrome, Opéra, Safari, Edge et FireFox)
     <a href="PlanDuSite.html">Plan du site</a>
-     <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></pre></footer>
+    <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></pre></footer>
 </html>
