--- a/PlanDuSite.html
+++ b/PlanDuSite.html
@@ -7,8 +7,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
     </head>
     <div class="topnav">
-        <a class="active" href="Les préférés d'Alex.html">Accueil</a>
-        <a href="BradleyCooper.html">Bradley Cooper</a>
+        <a href="Les préférés d'Alex.html">Accueil</a>
         <a href="BreakingBad.html">Breaking Bad</a>
         <a href="HXH.html">Hunter X Hunter</a>
         <a href="SitesD'Intérêts.html">Sites D'intérêts</a>
