--- a/PlanDuSite.html
+++ b/PlanDuSite.html
@@ -97,6 +97,6 @@
     <footer><center><pre>Vous pouvez me contacter par courriel au <a href="mailto:lafontainea@csdmedu.ca">lafontainea@csdmedu.ca</a> 
         ou par téléphone au 514-555-0131
         <a href="PlanDuSite.html">Plan du site</a>
-        (Chrome, Opéra, Safari, Edge et FireFox)</pre></center></footer>
+        (Chrome, Opéra, Safari, Edge et FireFox)
      <a href="https://www.facebook.com/?locale=fr_CA"><img src="facebook.ico" width=15px height="15px" ></a></center></pre></footer>
 </html>
