--- a/ÀPropos.html
+++ b/ÀPropos.html
@@ -19,7 +19,7 @@
       <h2><center>À Propos</center></h2>
     <title>Les préférés d'Alex</title>
    <p><center>J'ai décidé de faire ce site pour avoir un souvenir qui va rester dans le temps de mon moi actuel pour le moi dans le futur.</center></p>
-   <p><center>Je m'appelle Alex Lafontaine j'ai actuellement 23 et je suis à l'étude chez Émica pour passer un DEP en Soutien informatique.
+   <p><center>Je m'appelle Alex Lafontaine j'ai actuellement 23ans et je suis à l'étude chez Émica pour passer un DEP en Soutien informatique.
    J'ai fais ce site pour la compétence "Moyens de télécommunication". 
    </center></p>
    <p><center>"La vie est comme faire du vélo. Pour garder votre équilibre, vous devez continuer à avancer."   -Albert Einstein</center></p>
